# Fagprojekt-2026

./: .gitignore  README.md  infernce_metrics_fra_hokus_pokus_inference.txt  log.txt  metrics.txt  pyproject.toml  run_atten_prof_10.sh  run_eval_epochs_10.sh  run_eval_epochs_100.sh  run_eval_epochs_20.sh  run_eval_epochs_30.sh  run_eval_epochs_40.sh  run_eval_epochs_50.sh  run_eval_epochs_60.sh  run_eval_epochs_70.sh  run_eval_epochs_80.sh  run_eval_epochs_90.sh  run_evaluation.sh  run_job.sh  run_prof_attention.sh  run_prof_hokus_pokus.sh  run_prof_hokus_pokus_inference.sh  run_prof_inference.sh  run_prof_llama_inference.sh  run_prof_nystrom_inference.sh  run_prof_svd_kmeans.sh  run_prof_svd_nystrom.sh  shortlog.txt  submit_epochs.sh  tasks.py  trace.json
logs/: 28327208.err  28327208.out  28341941.err  attentionprofiling_28687685.err  attentionprofiling_28687685.out  eval_28648162.err  eval_28648162.out  eval_28648163.err  eval_28648163.out  eval_28648164.err  eval_28648164.out  eval_28648165.err  eval_28648165.out  eval_28648166.err  eval_28648166.out  eval_28648167.err  eval_28648167.out  eval_28648168.err  eval_28648168.out  eval_28648169.err  eval_28648169.out  eval_28648170.err  eval_28648170.out  eval_28648171.err  eval_28648171.out  head_level_eval_1.err  head_level_eval_1.out  head_level_eval_100tokens.out  head_level_eval_100tokens_random.out  head_level_eval_200tokens.out  head_level_eval_200tokens_random.out  head_level_eval_300tokens_random.out  head_level_eval_failed_try1.err  head_level_eval_failed_try1.out  hokus_pokus_28615080.err  (+7 more)
tests/: test_data.py
(+121 files in other folders)
