[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "fagprojekt"
version = "0.0.1"
description = "KV-Cache-Projekt"
authors = [
  { name = "Julielav", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi==0.115.6",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
